--- a/style.css
+++ b/style.css
@@ -157,8 +157,8 @@ main {
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
 }
 
-#dice-1 { top: 120px; }
-#dice-2 { top: 250px; }
+/*#dice-1 { top: 120px; }*/
+/*#dice-2 { top: 250px; }*/
 
 .player--winner {
   background-color: #2f2f2f;
